# doc-search-mcp

./: .gitignore  README.md  plan.md  pyproject.toml
src/doc_search_mcp/: __init__.py  chunker.py  config.py  db.py  embedder.py  indexer.py  jobs.py  search.py  server.py  warnings.py
src/doc_search_mcp/extractors/: __init__.py  epub.py  pdf.py  text.py
tests/: test_chunker.py  test_config.py  test_db.py  test_extractors.py  test_jobs.py  test_search.py
